adição de roles em categorias